@@ -1,7 +1,8 @@
 package com.amazon.driver;
 
-import java.net.URI;
+import java.net.URL;
 
+import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
@@ -10,16 +11,13 @@ public class ChromeDriverManager extends DriverManager {
 	@Override
 	public void createDriver() {
 
-		DesiredCapabilities capabilities = new DesiredCapabilities();
-		capabilities.setBrowserName("chrome");
-		capabilities.setVersion("73.0");
-		capabilities.setCapability("enableVNC", true);
-		capabilities.setCapability("enableVideo", false);
-
+		DesiredCapabilities capabilities = DesiredCapabilities.chrome();
+		ChromeOptions options = new ChromeOptions();
+		options.merge(capabilities);
 		try {
 			if (System.getProperty("HUB_HOST") != null) {
 				String host = System.getProperty("HUB_HOST");
-				driver = new RemoteWebDriver(URI.create(host).toURL(), capabilities);
+				driver = new RemoteWebDriver(new URL(host), capabilities);
 			}
 
 		} catch (Exception e) {
